<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_tv"
        android:textSize="@dimen/font_size"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/marginTop"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_et"
        android:inputType="text"
        android:layout_below="@id/name_tv"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_tv"
        android:textSize="@dimen/font_size"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@id/name_et"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_et"
        android:inputType="textEmailAddress"
        android:layout_below="@id/email_tv"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"/>

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_tv"
        android:textSize="@dimen/font_size"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@id/email_et"/>

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_et"
        android:inputType="phone"
        android:layout_below="@id/phone_tv"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"/>

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_tv"
        android:textSize="@dimen/font_size"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@id/phone_et"/>

    <EditText
        android:id="@+id/address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_et"
        android:inputType="text"
        android:layout_below="@id/address_tv"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"/>

    <TextView
        android:id="@+id/gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_tv"
        android:textSize="@dimen/font_size"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@id/address_et"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_tv"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_rb"
            android:textColor="#000"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/marginTop"/>

        <RadioButton
            android:id="@+id/female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_rb"
            android:textColor="#000"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/marginTop"/>

    </RadioGroup>

    <TextView
        android:id="@+id/interesting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:text="@string/interesting_tv"
        android:textColor="#000"
        android:textSize="@dimen/font_size"
        android:layout_below="@id/radiogroup"/>

    <CheckBox
        android:id="@+id/reading_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading_cb"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:checked="true"
        android:layout_below="@id/interesting_tv"/>

    <CheckBox
        android:id="@+id/swimming_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swimming_cb"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_below="@id/interesting_tv"
        android:layout_toRightOf="@id/reading_cb"/>

    <CheckBox
        android:id="@+id/walking_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walking_cb"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_below="@id/reading_cb"/>

    <CheckBox
        android:id="@+id/travelling_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling_cb"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_below="@id/swimming_cb"
        android:layout_toRightOf="@id/walking_cb"/>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/ok_btn"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_below="@id/walking_cb"
        android:layout_centerInParent="true"/>

</RelativeLayout>